# agentic-video-editor

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: agent-loop.md  edl-contract.md  publishing.md  qa-contract.md  research-findings.md  runtime-selection.md
examples/: README.md
schemas/: edl.schema.json  qa-report.schema.json  validation-report.schema.json
skill/: SKILL.md
skill/references/: hard-rules.md  qa.md  runtime-selection.md  workflow.md
src/agentic_video_editor/: cli.py  contact_sheet.py  demo.py  doctor.py  failure.py  ffmpeg.py  inspect.py  log.py  project.py  qa.py  render.py  transcribe.py  transcripts.py  validate.py
tests/: test_contact_sheet.py  test_qa.py  test_render_audio.py  test_transcribe.py  test_transcripts.py  test_validate.py
