[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-video-editor"
version = "0.1.0"
description = "Agent-first video editing scaffold: brief, assets, transcript packing, EDL rendering, QA, and reusable rules."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Agentic Video Editor contributors" },
]
keywords = [
  "agent",
  "video",
  "editing",
  "ffmpeg",
  "edl",
  "qa",
  "codex",
  "claude-code",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "imageio>=2.37.0",
  "imageio-ffmpeg>=0.6.0",
  "numpy>=2.0.0",
  "pillow>=11.0.0",
]

[project.optional-dependencies]
asr = [
  "faster-whisper>=1.1.0",
]

[project.scripts]
ave = "agentic_video_editor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_video_editor"]
